--- a/Clinic.Backend/Auth/Auth.Core/Auth.Core.csproj
+++ b/Clinic.Backend/Auth/Auth.Core/Auth.Core.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.1" />
     </ItemGroup>
 
 </Project>
