--- a/Clinic.Backend/Auth/Auth.Infrastructure/Auth.Infrastructure.csproj
+++ b/Clinic.Backend/Auth/Auth.Infrastructure/Auth.Infrastructure.csproj
@@ -24,4 +24,8 @@
       <ProjectReference Include="..\Auth.Core\Auth.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Identity" />
+    </ItemGroup>
+
 </Project>
