--- a/Clinic.Backend/Auth/Auth.Api/appsettings.json
+++ b/Clinic.Backend/Auth/Auth.Api/appsettings.json
@@ -8,5 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=CHEBURECHEK7; database=AuthDB; Integrated Security=true; Encrypt=False"
+  },
+  "SMTP": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "InnoClinic",
+    "SenderEmail": "innoclinic001@gmail.com",
+    "Password": "iumwhdmragwpvjkz",
+    "Security": true
+  },
+  "ReturnPaths": {
+    "ConfirmEmail": "https://localhost:5005/auth/verifyemail"
   }
 }
