--- a/Clinic.Backend/Auth/Auth.Infrastructure/Auth.Infrastructure.csproj
+++ b/Clinic.Backend/Auth/Auth.Infrastructure/Auth.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
+      <PackageReference Include="MailKit" Version="3.4.3" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
         <PrivateAssets>all</PrivateAssets>
@@ -18,14 +19,11 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="MimeKit" Version="3.4.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Auth.Core\Auth.Core.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Identity" />
     </ItemGroup>
 
 </Project>
