--- a/Clinic.Backend/Auth/Auth.Api/Auth.Api.csproj
+++ b/Clinic.Backend/Auth/Auth.Api/Auth.Api.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="IdentityModel" Version="6.0.0" />
       <PackageReference Include="IdentityServer4" Version="4.1.2" />
       <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.1" />
