Persisted & Grant dbs

--- a/Clinic.Backend/Auth/Auth.Api/appsettings.json
+++ b/Clinic.Backend/Auth/Auth.Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=CHEBURECHEK7; database=AuthDB; Integrated Security=true; Encrypt=False"
+    "sqlConnection": "server=CHEBURECHEK7; database=OAuth; Integrated Security=true; Encrypt=False",
+    "identitySqlConnection": "server=CHEBURECHEK7; database=AuthDB; Integrated Security=true; Encrypt=False"
   },
   "SMTP": {
     "Server": "smtp.gmail.com",
