--- a/Clinic.Backend/Auth/Auth.Api/Auth.Api.csproj
+++ b/Clinic.Backend/Auth/Auth.Api/Auth.Api.csproj
@@ -10,7 +10,7 @@
       <PackageReference Include="IdentityModel" Version="6.0.0" />
       <PackageReference Include="IdentityServer4" Version="4.1.2" />
       <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
-      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.1" />
+      <PackageReference Include="IdentityServer4.EntityFramework" Version="4.1.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
