--- a/Clinic.Backend/Auth/Auth.Infrastructure/Auth.Infrastructure.csproj
+++ b/Clinic.Backend/Auth/Auth.Infrastructure/Auth.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
       <PackageReference Include="MailKit" Version="3.4.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
         <PrivateAssets>all</PrivateAssets>
