--- a/Clinic.Backend/Services/Services.Core/Services.Core.csproj
+++ b/Clinic.Backend/Services/Services.Core/Services.Core.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Logic\Exceptions" />
+    </ItemGroup>
+
 </Project>
