Add Exceptions in controllers also delete repository pattern & UOW

--- a/Clinic.Backend/Offices/Offices.Core/Offices.Core.csproj
+++ b/Clinic.Backend/Offices/Offices.Core/Offices.Core.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="MongoDB.Bson" Version="2.18.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Logic\Exceptions" />
+    </ItemGroup>
+
 </Project>
