--- a/Clinic.Backend/Profiles/Profiles.Core/Profiles.Core.csproj
+++ b/Clinic.Backend/Profiles/Profiles.Core/Profiles.Core.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Logic\Profile\Exceptions" />
+    </ItemGroup>
+
 </Project>
