--- a/Clinic.Backend/Offices/Offices.Core/Offices.Core.csproj
+++ b/Clinic.Backend/Offices/Offices.Core/Offices.Core.csproj
@@ -7,11 +7,18 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.0" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+      <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0" />
       <PackageReference Include="MongoDB.Bson" Version="2.18.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Logic\Exceptions" />
+      <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+      <PackageReference Include="Serilog" Version="2.12.0" />
+      <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+      <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
 </Project>
