--- a/Clinic.Backend/Profiles/Profiles.Core/Profiles.Core.csproj
+++ b/Clinic.Backend/Profiles/Profiles.Core/Profiles.Core.csproj
@@ -10,6 +10,10 @@
       <PackageReference Include="AutoMapper" Version="12.0.0" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+      <PackageReference Include="InnoClinicSharedModelsForMassTransit" Version="1.0.0" />
+      <PackageReference Include="MassTransit" Version="8.0.12" />
+      <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.12" />
       <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
