--- a/Clinic.Backend/Offices/Offices.Core/Offices.Core.csproj
+++ b/Clinic.Backend/Offices/Offices.Core/Offices.Core.csproj
@@ -9,9 +9,11 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.0" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
       <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.1" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0" />
+      <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
       <PackageReference Include="MongoDB.Bson" Version="2.18.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
       <PackageReference Include="Serilog" Version="2.12.0" />
