--- a/Clinic.Backend/SharedModels/SharedModels/SharedModels.csproj
+++ b/Clinic.Backend/SharedModels/SharedModels/SharedModels.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageId>InnoClinicSharedModelsForMassTransit</PackageId>
+        <PackageVersion>1.1.0</PackageVersion>
     </PropertyGroup>
 
 </Project>
