--- a/Clinic.Backend/Appointments/Appointments.Core/Appointments.Core.csproj
+++ b/Clinic.Backend/Appointments/Appointments.Core/Appointments.Core.csproj
@@ -8,6 +8,9 @@
 
     <ItemGroup>
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+      <PackageReference Include="InnoClinicSharedModelsForMassTransit" Version="1.4.0" />
+      <PackageReference Include="MassTransit" Version="8.0.12" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.12" />
       <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
         <PrivateAssets>all</PrivateAssets>
