--- a/Clinic.Backend/SharedModels/SharedModels/SharedModels.csproj
+++ b/Clinic.Backend/SharedModels/SharedModels/SharedModels.csproj
@@ -6,7 +6,8 @@
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageId>InnoClinicSharedModelsForMassTransit</PackageId>
-        <PackageVersion>1.1.0</PackageVersion>
+        <PackageVersion>1.4.0</PackageVersion>
+        <Authors>Vladislav Mikhalchuk</Authors>
     </PropertyGroup>
 
 </Project>
