--- a/Clinic.Backend/Auth/Auth.Api/Auth.Api.csproj
+++ b/Clinic.Backend/Auth/Auth.Api/Auth.Api.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-    </PropertyGroup>
+    <UserSecretsId>79561b36-5cf9-4d10-ba8a-7733e31809cc</UserSecretsId>
+  </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Auth.Infrastructure\Auth.Infrastructure.csproj" />
