--- a/Clinic.Backend/Profiles/Profiles.Api/appsettings.json
+++ b/Clinic.Backend/Profiles/Profiles.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=CHEBURECHEK7; database=ProfilesDB; Integrated Security=true; Encrypt=False"
+    "DefaultConnection": "server=localhost,1433; Initial Catalog=ProfilesDB;User ID =SA; Password=Pa55w0rd2023; Encrypt=false"
   },
   "Serilog": {
     "MinimumLevel": {
