--- a/Clinic.Backend/Appointments/Appointments.Api/appsettings.json
+++ b/Clinic.Backend/Appointments/Appointments.Api/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=AppointmentsDB; Port=5432; User Id=postgres; Password=rootroot"
+    "DefaultConnection": "User ID=postgres;Password=rootroot;Server=postgresql_db;Database=DocumentsDb;IntegratedSecurity=true;Pooling=true;"
   },
 
   "Serilog": {
