--- a/Clinic.Backend/Offices/Offices.Api/Offices.Api.csproj
+++ b/Clinic.Backend/Offices/Offices.Api/Offices.Api.csproj
@@ -4,11 +4,18 @@
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Offices.Core\Offices.Core.csproj" />
       <ProjectReference Include="..\Offices.Infrastructure\Offices.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
