adding sign-in, sign-up & confirm-email

--- a/Clinic.Backend/Auth/Auth.Api/appsettings.json
+++ b/Clinic.Backend/Auth/Auth.Api/appsettings.json
@@ -34,7 +34,8 @@
     "Password": "iumwhdmragwpvjkz",
     "Security": true
   },
+  
   "ReturnPaths": {
-    "ConfirmEmail": "https://localhost:4200/auth/verifyemail"
+    "ConfirmEmail": "http://localhost:4200/auth/confirm-email"
   }
 }
